Add create and edit pages and validate form input

--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>LLighty</title>
-        <link rel="stylesheet" type="text/css" href="css/styles.css" />
+        <link rel="stylesheet" type="text/css" href="css/index/styles.css" />
     </head>
     <body>
         <header class="container header">
             <div class="header__title">My Shop</div>
             <nav class="header__nav">
                 <ul class="header__nav__items">
-                    <li class="header__nav__item">My Lamps</li>
-                    <li class="header__nav__item">Create Lamp</li>
+                    <li class="header__nav__item">
+                        <a href="./index.html">My Lamps</a>
+                    </li>
+                    <li class="header__nav__item">
+                        <a href="./create.html">Create Lamp</a>
+                    </li>
                 </ul>
             </nav>
             <form class="header__form">
