Implement all CRUD operations via corresponding HTTP methods

--- a/edit.html
+++ b/edit.html
@@ -142,7 +142,7 @@
                     </li>
 
                     <input
-                        id="submit-button"
+                        id="edit-button"
                         class="create-edit__form__submit"
                         type="submit"
                         value="Edit"
@@ -150,6 +150,6 @@
                 </ul>
             </form>
         </section>
-        <script src="./js/create.js" type="module"></script>
+        <script src="./js/edit.js" type="module"></script>
     </body>
 </html>
