Add modal window

--- a/edit.html
+++ b/edit.html
@@ -91,13 +91,13 @@
                             name=""
                             id=""
                         >
-                            <option value="bedroom">Bedroom</option>
-                            <option value="bathroom">Bathroom</option>
-                            <option value="kitchen">Kitchen</option>
-                            <option value="livingroom">Living room</option>
-                            <option value="corridor">Corridor</option>
-                            <option value="childrenroom">Children room</option>
-                            <option value="office">Office</option>
+                            <option value="BEDROOM">Bedroom</option>
+                            <option value="BATHROOM">Bathroom</option>
+                            <option value="KITCHEN">Kitchen</option>
+                            <option value="LIVINGROOM">Living room</option>
+                            <option value="CORRIDOR">Corridor</option>
+                            <option value="CHILDRENROOM">Children room</option>
+                            <option value="OFFICE">Office</option>
                         </select>
                     </li>
                     <li class="create-edit__form__list__item">
@@ -136,8 +136,8 @@
                             name=""
                             id=""
                         >
-                            <option value="bedside">Bedside</option>
-                            <option value="task">Task</option>
+                            <option value="BEDSIDE">Bedside</option>
+                            <option value="TASK">Task</option>
                         </select>
                     </li>
 
@@ -150,6 +150,13 @@
                 </ul>
             </form>
         </section>
+        <div class="modal-window" id="modal-window">
+            <div class="modal-box">
+                <span class="close">&times;</span>
+                <p>Incorrect input data</p>
+                <p>Please, try again</p>
+            </div>
+        </div>
         <script src="./js/edit.js" type="module"></script>
     </body>
 </html>
